--- a/test/ts-example/index.html
+++ b/test/ts-example/index.html
@@ -2,8 +2,11 @@
 <html>
 <head lang="zh-CN">
   <title>Juice Cube</title>
+  <%= htmlWebpackPlugin.options.loading.css %>
 </head>
 <body>
-  <div id="root" />
+  <div id="root">
+    <%= htmlWebpackPlugin.options.loading.html %>
+  </div>
   </body>
 </html>
