fix: update html-webpack-plugin and minify html

--- a/test/ts-example/index.html
+++ b/test/ts-example/index.html
@@ -2,6 +2,8 @@
 <html>
 <head lang="zh-CN">
   <title>Juice Cube</title>
+  <!--configArea-->
+  <!--endOfConfigArea-->
   <%= htmlWebpackPlugin.options.loading.css %>
 </head>
 <body>
