--- a/test/ts-example/index.html
+++ b/test/ts-example/index.html
@@ -6,6 +6,8 @@
   <!--endOfConfigArea-->
   <%= htmlWebpackPlugin.options.loading.css %>
 </head>
+<script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
+<script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
 <body>
   <div id="root">
     <%= htmlWebpackPlugin.options.loading.html %>
